fix layout broken on mobile view

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,4 +1,5 @@
 body{
+  display: flex;
   margin: 0;
 }
 
